@@ -106,11 +106,8 @@ public class KeycloakServiceImpl implements KeycloakService {
     @Override
     public UserDto getUserByEmail(String email) {
         UsersResource usersResource = keycloak.realm(realm).users();
-        List<UserRepresentation> userRepresentations = usersResource.search(null, null, null, email, null, null);
-        if (userRepresentations.isEmpty()) {
-            throw new CustomNotfoundException("User not found with email: " + email);
-        }
-        return modelMapper.map(userRepresentations.get(0), UserDto.class);
+        UserRepresentation userRepresentations = usersResource.searchByEmail(email,true).getFirst();
+        return modelMapper.map(userRepresentations, UserDto.class);
     }
 
 
